--- a/delete_vm_snapshot.yml
+++ b/delete_vm_snapshot.yml
@@ -13,4 +13,5 @@
         name: "{{ guest_name }}"
         state: absent
         snapshot_name: {{ snapshot_name }}
+        validate_certs: False
      delegate_to: localhost
