--- a/change_appliance_password.yml
+++ b/change_appliance_password.yml
@@ -6,4 +6,5 @@
       command: "echo {{ new_password }} | passwd --stdin root"
       become: yes
       register: output
+      delgate_to: localhost
       
