--- a/change_appliance_password.yml
+++ b/change_appliance_password.yml
@@ -3,8 +3,9 @@
   hosts: all
   tasks:
     - name: Change vCenter root password
-      command: "echo {{ new_password }} | passwd --stdin root"
+      shell:  ls -l
+      #command: "echo {{ new_password }} | passwd --stdin root"
       become: yes
       register: output
-      delgate_to: localhost
+      #delgate_to: localhost
       
