--- a/change_appliance_password.yml
+++ b/change_appliance_password.yml
@@ -7,6 +7,6 @@
       #command: "echo {{ new_password }} | passwd --stdin root"
       become: yes
       register: output
-      validate_certs: false
+      #validate_certs: false
       #delgate_to: localhost
       
