--- a/change_appliance_password.yml
+++ b/change_appliance_password.yml
@@ -5,8 +5,7 @@
     - name: Change vCenter root password
       shell:  ls -l
       #command: "echo {{ new_password }} | passwd --stdin root"
-      become: yes
       register: output
       #validate_certs: false
-      delgate_to: 10.115.49.203
+      #delgate_to: 10.115.49.203
       
