--- a/change_appliance_password.yml
+++ b/change_appliance_password.yml
@@ -1,6 +1,7 @@
 ---
 - name: Reset vCenter Appliance Password
   hosts: all
+  connection: local
   tasks:
     - name: Change vCenter root password
       shell:  ls -l
