--- a/change_appliance_password.yml
+++ b/change_appliance_password.yml
@@ -5,7 +5,7 @@
   tasks:
     - name: Change vCenter root password
       #shell:  echo {{ new_password }} | passwd --stdin root
-      #command: "echo {{ new_password }} | passwd --stdin root"
+      command: "echo {{ new_password }} | passwd --stdin root"
       register: output
       #validate_certs: false
       #delgate_to: 10.115.49.203
