--- a/change_appliance_password.yml
+++ b/change_appliance_password.yml
@@ -1,7 +1,7 @@
 ---
 - name: Reset vCenter Appliance Password
   hosts: all
-  connection: local
+  #connection: local
   tasks:
     - name: Change vCenter root password
       shell:  shell #echo {{ new_password }} | passwd --stdin root
