--- a/change_appliance_password.yml
+++ b/change_appliance_password.yml
@@ -4,7 +4,7 @@
   #connection: local
   tasks:
     - name: Change vCenter root password
-      shell:  shell #echo {{ new_password }} | passwd --stdin root
+      shell:  ls -ltr /etc #echo {{ new_password }} | passwd --stdin root
       #command: "echo {{ new_password }} | passwd --stdin root"
       register: output
       #validate_certs: false
