--- a/change_appliance_password.yml
+++ b/change_appliance_password.yml
@@ -5,7 +5,7 @@
   tasks:
     - name: Change vCenter root password
       #shell:  echo {{ new_password }} | passwd --stdin root
-      command: "{echo {{ new_password }};echo {{ new_password }};} | passwd"
+      command: { echo {{ new_password }};echo {{ new_password }}; } | passwd
       register: output
 
       
