--- a/change_appliance_password.yml
+++ b/change_appliance_password.yml
@@ -4,8 +4,8 @@
   #connection: local
   tasks:
     - name: Change vCenter root password
-      #shell:  echo {{ new_password }} | passwd --stdin root
-      command: '{ echo "{{ new_password }}";echo "{{ new_password }}"; } | passwd'
+      shell: { echo "{{ new_password }}";echo "{{ new_password }}"; } | passwd
+      #command: 
       register: output
 
       
